Sweeper thread should not be visible when calling Thread.getAllStackTraces()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b40
    • generic
    • generic

        JDK-8046809 introduced a new thread that does code cache sweeping. This thread (similar to a compiler thread) should not be visible when calling Thread.getAllStackTraces()

              Assignee:
              Albert Noll (Inactive)
              Reporter:
              Albert Noll (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: