8062284: Sweeper thread should not be visible when calling Thread.getAllStackTraces()

Make thread not visible when calling Thread.getAllStackTraces()

Reviewed-by: kvn, shade